# EngineeringScripts

./: .gitignore  pyproject.toml  rfem_LinesSupport.py  rfem_testLineSupport.ipynb  rfem_testLineSupport.py
MY_RFEM/: getResults.py  linesSupport.py
calcAreas/: calcArea.py
