[project]
name = "EngineeringScripts"
version = "0.1.0"
description = "Some Python scripts to make like easier"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.8.0",
]
